@@ -3,10 +3,10 @@ plugins {
 }
 
 dependencies {
-    implementation project(':core:financier-domain')
-    implementation project(':core:financier-usecase')
-    implementation project(':infra:financier-repository')
-    implementation project(':infra:financier-gateway')
+    implementation project(':financier-core-domain')
+    implementation project(':financier-core-usecase')
+    implementation project(':financier-infra-repository')
+    implementation project(':financier-infra-gateway')
 
     // web
     implementation('org.springframework.boot:spring-boot-starter-web') {
@@ -19,13 +19,6 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.flywaydb:flyway-core'
     runtimeOnly 'org.postgresql:postgresql'
-
-//    // misc
-//    implementation "org.apache.poi:poi-ooxml:$apachePoiVersion"
-//
-//    implementation "org.mapstruct:mapstruct:$mapstructVersion"
-//    annotationProcessor "org.mapstruct:mapstruct-processor:$mapstructVersion"
-
 
     // testing
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -50,4 +43,17 @@ tasks.named('jar') {
 
 springBoot {
     buildInfo()
+}
+
+
+// enable preview features
+final PREVIEW_OPTION = '--enable-preview'
+tasks.withType(JavaCompile).each {
+    it.options.compilerArgs.add(PREVIEW_OPTION)
+}
+tasks.withType(JavaExec).each {
+    it.jvmArgs([PREVIEW_OPTION])
+}
+tasks.withType(Test).each {
+    it.jvmArgs([PREVIEW_OPTION])
 }
